# dartlab

./: .env.example  .gitignore  .pre-commit-config.yaml  ASK_WORKBENCH_KERNEL.md  CAPABILITIES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION.md  DESIGN.md  LICENSE  NOTICE  README.md  README_EN.md  README_KR.md  codecov.yml  package-lock.json  package.json  product-smoke-quick.json  pyproject.toml
.claude/: utf8.ps1
.claude/hooks/: check_no_ai_markers.py  validate_stop_phrase.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: README.md  _hfRetry.py  buildSearchDelta.py  buildSearchMain.py  buildSkillMarket.py  bulkUploadHf.py  ciFastLocal.sh  github-gh-credential-wsl.sh  monitorPipeline.py  planRealdata.py  prebuildData.py  prebuildValuation.py  seedFromHf.py  syncData.py  syncNewStocks.py  syncRecent.py  testWheelSmoke.sh  updateDartList.py  updateKindList.py  uploadData.py  uploadHfReadme.py  verifyWheel.py
.github/workflows/: ai-policy.yml  allFilingsBackfill.yml  brokerageSync.yml  buildGovIndexData.yml  buildGovPriceData.yml  buildKrxData.yml  buildKrxIndexData.yml  buildPricesSnapshot.yml  ci-fast.yml  ci-full.yml  ci-nightly.yml  ci.yml  codeql.yml  dartNewStocks.yml  dataAudit.yml  dataPipeline.yml  dataPrebuild.yml  dataSync.yml  dataSyncDaily.yml  deploy-landing.yml  deploySpaces.yml  docs.yml  edgarPricesBackfill.yml  edgarPricesDaily.yml  edgarRebuildContinue.yml  edgarSafetyGate.yml  edgarSync.yml  gdeltSync.yml  intentModel.yml  kindlist.yml  macroData.yml  mapBuild.yml  metrics.yml  naverNewsSync.yml  newsArchiveSync.yml  notify-publish.yml  originalSync.yml  publish.yml  publishCarousels.yml  pushhub-test.yml  (+8 more)
.playwright-cli/: page-2026-04-29T08-21-48-943Z.yml
blog/: ASSET_POLICY.md  BLOG.md  BLOG_PIPELINE.md  BLOG_STRUCTURE.md  DARTLAB_USAGE.md  PIPELINE.md  QUALITY_STANDARDS.md  SEO_PLAYBOOK.md  TOPIC_ROADMAP.md
blog/_reference/: BLOG_MASTER_WRITER.md  INTERNAL_LINKS_MAP.md  WRITING_QUEUE.md
blog/_scripts/: CARDS.md  README.md  auditBlog.py  auditBlogFinance.py  audit_carousel_images.py  audit_seo.py  autoBlogGenerate.py  backfill_blog_insights.py  build_carousel_contracts.py  cards_plan.py  check_abbrev_body.py  fetch_cc0_images.py  gen_blog_cc0.py  gen_blog_thumbnails.py  gen_company_flux.py  gen_data_thumbnails.py  gen_news_cc0.py  gen_news_flux.py  gen_news_thumbnails.py  migrate_carousels_to_blog.py  plan_card_news.py  svg_dark_convert.py  sync_blog_insights.py  sync_financials.py  test_cards_plan.py  test_carousel_contracts.py
docs/: API_FLOWCHART.md  CASE_STUDIES.md  DEVELOPMENT.md  INCIDENTS.md  LOG_MIGRATION.md  RELEASE.md  ROADMAP_1_0_0.md  SLO.md  STATUS.md  TROUBLESHOOTING.md  VERSIONING.md  about.md  changelog.md  index.md  methodology.md  stability.md
docs/api/: company.md  credit.md  finance.md  overview.md  review.md  scan.md  story.md
docs/diagrams/: AI_EVIDENCE_FLOW.md  ARCHITECTURE.md  DATA_PIPELINE.md
docs/getting-started/: installation.md  quickstart.md  sections.md
docs/skills/: basic.md  capability.md  engines.md  finance.md  index.md  pyodide.md  runtime.md  screens.md  start.md  visuals.md
docs/tutorials/: index.md
examples/plugin-example/: README.md  pyproject.toml
examples/plugin-example/dartlab_plugin_example/: __init__.py  hello.py
experiments/: macro_deep_insights.py  macro_signal_discovery.py
experiments/001_numberBridgeMatching/: 001_bridgeTest.py  002_bridgeInterpolation.py  003_breakpointDetection.py  004_fullPipeline.py  (+1 more)
landing/: STATUS.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
mainPlan/: 00-product-prd.md  01-target-architecture.md  02-runtime-ai-services.md  03-ui-design-system.md  04-migration-execution-plan.md  05-validation-release-rollback.md  06-inventory-and-freeze-template.md  07-progress-ledger.md  08-shared-wiring-parity-maintenance.md  ARCHITECTURE.md  ui-platform-refactor-prd.md
notebooks/: STATUS.md
ops/: README.md  ai.md  analysis.md  api-contract.md  architecture.md  channel.md  code.md  company.md  coreloop.md  credit.md  dashboard.md  data.md  edgar.md  engineAudit.md  experiments.md  gather.md  guide.md  industry.md  issues.md  listing.md  macro.md  mappers.md  mcp.md  notebooks.md  philosophy.md  pyodide.md  quant.md  quantWorldClass.md  refactor-checklist.md  review.md  reviewAudit.md  scan.md  search.md  selfai.md  skills.md  spaces.md  story.md  testing.md  ui.md  viz.md  (+1 more)
pyodide/: README.md  build.py  loader.js  test_autofetch.mjs  test_diagnose.mjs  test_fetchOrder.mjs  test_node.mjs  xlwings_diagnose.py
samples/: 000270.md  000660.md  004020.md  005930.md  017670.md  034730.md  036570.md  042660.md  051910.md  055550.md  090430.md
scripts/: _audit_blog_finance_report.md  auditAi.py  auditBlogFinance.py  buildNotebooks.py  dartlab-skills-review.py  qualityBaseline.json  repair_cache_with_progress.py
skills/: index.json  pyodide.json
sns/: YOUTUBE_POST.md
spaces/: Dockerfile  README.md
tests/: POLICY.md  __init__.py  _helpers.py  conftest.py  fixtureHelper.py  installHooks.sh  run.py  test-realdata.sh  testCoreProviders.py  testCoreRender.py  testCycleScan.py  testLintCamelcaseNoShim.py  testNamingConsistency.py  test_agent.py  test_agent_dashboard_context.py  test_agent_gateway.py  test_ai_agent_smoke.py  test_ai_analysis_tools.py  test_ai_ask_workbench_kernel.py  test_ai_audit_scripts.py  test_ai_company_cache.py  test_ai_context.py  test_ai_context_playbook.py  test_ai_enrich_yoy.py  test_ai_formatting.py  test_ai_intelligence_pack.py  test_ai_memory_stats.py  test_ai_pass_loop.py  test_ai_progress_capture.py  test_ai_provider_messages.py  test_ai_providers.py  test_ai_recipe_tools.py  test_ai_recipes_runs_scorecard.py  test_ai_recipes_validate.py  test_ai_research_graph.py  test_ai_runtime.py  test_ai_serialize_format.py  test_ai_skill_catalog_audit.py  test_ai_stream_latency.py  test_ai_tools.py  (+196 more)
ui/: tsconfig.base.json
(+10544 files in other folders)
