[project]
name = "dartlab"
version = "0.10.1"
description = "One stock code → full company story. Korean DART & US SEC EDGAR filings as structured Python data."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "eddmpython"}
]
keywords = [
    "dart",
    "edgar",
    "sec",
    "financial-statements",
    "korea",
    "disclosure",
    "accounting",
    "polars",
    "sections",
    "mcp",
    "ai-analysis",
    "annual-report",
    "10-k",
    "xbrl",
    "전자공시",
    "재무제표",
    "사업보고서",
    "공시분석",
    "다트",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Korean",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    # core (pyodide 호환 — polars, numpy, bs4, lxml은 pyodide 빌트인)
    # core
    "beautifulsoup4>=4.14.3,<5",
    "diff-match-patch>=20230430",
    "openpyxl>=3.1.5,<4",
    # C 확장 — 일반: PyPI, pyodide: 빌트인 (버전 무관)
    "lxml>=6.0.2,<7; sys_platform != 'emscripten'",
    "lxml; sys_platform == 'emscripten'",
    "polars>=1.0.0,<2; sys_platform != 'emscripten'",
    "polars; sys_platform == 'emscripten'",
    # M6: cross-company × multi-table aggregation 의 OOC god mode — Polars
    # LazyFrame ↔ DuckDB relation Arrow zero-copy. 환경변수
    # DARTLAB_CROSS_SCAN_ENGINE=duckdb 또는 large dataset 검출 시 자동 fallback.
    "duckdb>=1.0,<2; sys_platform != 'emscripten'",
    "numpy>=1.26.0,<3; sys_platform != 'emscripten'",
    "numpy; sys_platform == 'emscripten'",
    # parquet fallback / pyodide bridge. pyodide 는 빌트인.
    "pyarrow>=17,<21; sys_platform != 'emscripten'",
    "pyarrow; sys_platform == 'emscripten'",
    # network
    "httpx>=0.28.1,<1; sys_platform != 'emscripten'",
    "httpx; sys_platform == 'emscripten'",
    "huggingface-hub>=0.20.0,<1; sys_platform != 'emscripten'",
    "rich>=14.3.3,<15; sys_platform != 'emscripten'",
    "rich; sys_platform == 'emscripten'",
    # ai providers (pyodide 불필요)
    "openai>=1.0.0,<3; sys_platform != 'emscripten'",
    # server (pyodide 불필요)
    "fastapi>=0.135.1,<1; sys_platform != 'emscripten'",
    "uvicorn[standard]>=0.30.0,<1; sys_platform != 'emscripten'",
    "sse-starlette>=2.0.0,<3; sys_platform != 'emscripten'",
    "mcp[cli]>=1.0,<1.27.1; sys_platform != 'emscripten'",  # 1.27.1 Linux wheel 의 mcp.server namespace 회귀 — CI Fast 차단 (2026-05-17)
    "qrcode>=7.0,<9; sys_platform != 'emscripten'",
    "PyYAML>=6.0.0,<7; sys_platform != 'emscripten'",
    # viz
    "plotly>=5.0.0,<6; sys_platform != 'emscripten'",
]

[project.scripts]
dartlab = "dartlab.cli.main:main"
dartlab-coreloop = "dartlab.cli.coreloop:main"

[project.entry-points."dartlab.plugins"]

[project.urls]
Homepage = "https://eddmpython.github.io/dartlab/"
Repository = "https://github.com/eddmpython/dartlab"
Documentation = "https://eddmpython.github.io/dartlab/docs/"
Issues = "https://github.com/eddmpython/dartlab/issues"
Changelog = "https://github.com/eddmpython/dartlab/releases"
Desktop = "https://github.com/eddmpython/dartlab-desktop/releases/latest/download/DartLab.exe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dartlab"]
# include 는 .gitignore 규칙을 override — CI 에서 python -m build 가 .gitignore 의
# 'data/' 루트-미지정 패턴에 걸려 src/dartlab/*/data/ 를 wheel 에서 빠뜨리는
# packaging 사고 방어. artifacts 만으로는 불충분함이 실증됨 (2026-04-19).
include = [
    "src/dartlab/**/*.py",
    "src/dartlab/**/*.md",
    "src/dartlab/**/*.yaml",
    "src/dartlab/**/*.yml",
    "src/dartlab/**/*.json",
    "src/dartlab/**/*.parquet",
    "src/dartlab/**/py.typed",
]
artifacts = [
    "src/dartlab/ui/build/**",
    "src/dartlab/**/*.json",
    "src/dartlab/**/*.parquet",
    "src/dartlab/py.typed",
]
exclude = [
    "**/_reference/**",
    "**/_backup/**",
    "src/dartlab/engines/edinet/**",
    "src/dartlab/engines/esg/**",
    "src/dartlab/engines/event/**",
    "src/dartlab/engines/supply/**",
    "src/dartlab/engines/watch/**",
]

[tool.hatch.build.targets.sdist]
# wheel include 와 동일 패턴으로 맞춰 산출물 drift 방지
include = [
    "src/dartlab/**/*.py",
    "src/dartlab/**/*.md",
    "src/dartlab/**/*.yaml",
    "src/dartlab/**/*.yml",
    "src/dartlab/**/*.json",
    "src/dartlab/**/*.parquet",
    "src/dartlab/**/py.typed",
    "src/dartlab/ui/build/**",
    "README.md",
    "LICENSE",
]
exclude = [
    "**/_reference/**",
    "**/_backup/**",
    "src/dartlab/engines/edinet/**",
    "src/dartlab/engines/esg/**",
    "src/dartlab/engines/event/**",
    "src/dartlab/engines/supply/**",
    "src/dartlab/engines/watch/**",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["experiments", "*/_reference"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# F401 = unused import — __init__.py 의 의도적 re-export 패턴이 dartlab 전반에 다수 (camelCase codemod 후 더 늘어남).
# 진짜 unused import 는 deptry / vulture 가 catch.
ignore = ["E402", "E501", "E741", "F841", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test*.py", "bench_*.py", "bench*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "test*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
# Hypothesis ghostwriter draft 폴더는 자동 수집 제외 — 명시 호출 시에만 실행.
# (`tests/_drafts/` 안 fuzz draft 는 사용자 review 후 정식 위치로 이동.)
# pytest default (`*.egg .* CVS _darcs {arch} dist node_modules venv`) + `_drafts` 추가.
norecursedirs = ["*.egg", ".*", "CVS", "_darcs", "{arch}", "dist", "node_modules", "venv", "_drafts"]
markers = [
    "requires_data: 로컬 parquet 데이터 필요 (CI에서 skip)",
    "unit: 순수 로직/mock만 — 데이터 로드 없음, 병렬 안전",
    "integration: Company 1개 로딩 필요 — 중간 무게",
    "heavy: 대량 데이터 로드 — 단독 실행 필수",
    "realData: 엔진별 실제 데이터 스모크 — HF parquet + 실제 파이프라인 실행 (schema drift/silent None 방어)",
    "freshInstall: 빈 캐시 → 자동 다운로드 경로 검증 (외부 사용자 첫 호출 시나리오)",
    "network: 외부 HTTP API 호출 (HF/DART/EDGAR/FRED) — transient 실패 재시도 대상",
    "slow: 실행 30초 이상 — PR fast path 에서 제외",
    # flaky 는 pytest-rerunfailures 가 설치된 환경에서 작동. 미설치 환경에선 무시.
    # 미등록 시 PytestUnknownMarkWarning — 본 항목으로 warning 차단.
    "flaky: transient 실패 자동 재시도 (pytest-rerunfailures)",
    # ghostwriter 자동 생성 draft (사용자 review 전) — `tests/_drafts/` 안 한정.
    "draft: Hypothesis ghostwriter 자동 draft — 정식 위치 이동 전 시범 검증",
    # AI agent eval — LLM 호출 + judge 채점. 운영자 트리거 또는 nightly.
    "eval: AI agent LLM 출력 회귀 (외부 API 호출, 비용 발생)",
    # mutation testing 메타 마커.
    "mutation: mutmut 대상 표시 — 잘못된 mutant 가 잡혀야 통과",
    # metamorphic — 변환 후 보존 속성 검증 (수치 분석에 oracle 부재 시).
    "metamorphic: 변환 후 속성 보존 (ranking shift, 단위 변환, 통화 환산)",
    # vcr — record-replay 카세트 사용 (외부 HTTP mock).
    "vcr: HTTP record-replay 카세트 사용 (네트워크 없이 회귀 검증)",
]

# ════════════════════════════════════════════════════════════════════
# Mutation testing (mutmut) — Track 5
# ────────────────────────────────────────────────────────────────────
# 부분 적용: Polars/numpy native 호출 비중 큰 모듈은 mutant 의미 없음 (core/ 외 제외).
# 실행: uv run mutmut run    # 약 30-60 분
# 결과: uv run mutmut results
# 목표: mutation score ≥ 80%
[tool.mutmut]
paths_to_mutate = [
    "src/dartlab/core/formatting.py",
    "src/dartlab/core/cache.py",
    "src/dartlab/core/naming/__init__.py",
]
tests_dir = "tests/core/"
runner = "uv run python -X utf8 -m pytest -x -m unit --no-cov -q"
# CI 통합은 주간 cron — 매 PR fail gate 는 아님 (시간 비용 큼).

[tool.coverage.run]
source = ["dartlab"]
# omit — coverage 90% 의 "90%" 는 "business logic 기준" 이 되도록 thin boundary /
# rendering / external-adapter / experimental 코드를 제외. 이 코드들은 realData
# smoke + wheel-smoke + integration 테스트로 간접 검증되거나 테스트 ROI 가 낮음.
omit = [
    # 기존 omit
    "src/dartlab/engines/ai/providers/*",
    "src/dartlab/review/*",

    # CLI — 얕은 argparse 래퍼. cli_e2e.py 가 핵심 경로 커버.
    "src/dartlab/cli/commands/*",
    "src/dartlab/cli/main.py",
    "src/dartlab/cli/parser.py",
    "src/dartlab/cli/rendering.py",
    "src/dartlab/cli/stdio.py",
    "src/dartlab/cli/services/*",

    # 서버 API — HTTP 핸들러, realData end-to-end 로 간접 검증.
    "src/dartlab/server/api/*",
    "src/dartlab/server/web.py",

    # 외부 API 클라이언트 — 네트워크 의존, 모킹 ROI 낮음.
    "src/dartlab/providers/dart/openapi/*",
    "src/dartlab/providers/edgar/openapi/*",
    "src/dartlab/providers/edinet/openapi/*",

    # DART docs viewer/rendering — HTML/마크다운 생성, 시각 검증 영역.
    "src/dartlab/providers/dart/docs/viewer.py",
    "src/dartlab/providers/dart/docs/viewerExport.py",

    # 메신저 어댑터 — Slack/Telegram/Discord SDK 모킹 ROI 낮음.
    "src/dartlab/channel/adapters/*",
    "src/dartlab/channel/devtunnel.py",

    # 시각화 — Plotly/차트 렌더링, snapshot 테스트 영역.
    "src/dartlab/viz/charts/*",
    "src/dartlab/viz/generators.py",
    "src/dartlab/viz/plotly.py",

    # 개발자 전용 — 사용자 미접근.
    "src/dartlab/ai/audit/*",
    "src/dartlab/mcp/*",

    # 얕은 display/AI helper 래퍼 — great_tables/IPython 옵셔널.
    "src/dartlab/viz/display/*",
    "src/dartlab/viz/network.py",

    # 실험/레거시 — 사용 여부 재평가 필요, 현재 0% 모듈.
    "src/dartlab/analysis/financial/research/*",
    "**/_reference/*",
    "**/_backup/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
# Coverage ratchet — omit 확대 후 추정 41.5% 기준 40 에서 시작.
# 경로 B (strategic omit + business logic 집중 테스트) 진행 중.
# 단계 계획: 40 → 50 → 60 → 70 → 80 → 90 (omitted-adjusted). PR 마다 하락 시 CI FAIL.
# CI 에서 `pytest --cov-fail-under` 플래그로 실제 강제.
fail_under = 40

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src/dartlab"]
exclude = [
    "src/dartlab/engines/ai/providers/**",
    "ui/**",
    "experiments/**",
]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.bandit]
exclude_dirs = ["experiments", "tests"]
skips = ["B101"]

[tool.deptry]
# 옵셔널 통합 의존성 — 사용자가 별도 설치할 때만 동작 (런타임 ImportError 가드 있음)
extend_exclude = [
    "src/dartlab/.*/_reference/.*",  # 학습/실험 코드, 런타임 미사용
]
[tool.deptry.per_rule_ignores]
DEP001 = [
    # ── channel 어댑터 (외부 메신저 옵셔널) ──
    "discord", "slack_bolt", "telegram",
    # ── CLI 인터랙티브 옵셔널 ──
    "prompt_toolkit",
    # ── display 옵셔널 ──
    "great_tables", "itables", "IPython",
    # ── gather 옵셔널 ──
    "FinanceDataReader", "tavily",
    # ── _reference 학습/실험 ──
    "agents", "owlready2", "rapidfuzz", "edgar",
    # ── transitive deps (다른 패키지가 끌어옴) ──
    "dotenv",      # python-dotenv
    "google",      # google-genai
    "yaml",        # pyyaml
    "bs4",         # beautifulsoup4
    "starlette",   # fastapi가 끌어옴
    "pydantic",    # fastapi가 끌어옴
]
DEP002 = [
    "beautifulsoup4",  # bs4 직접 import
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "hatchling>=1.29.0",
    "hypothesis>=6.100.0",
    "import-linter>=2.0",  # tests/audit/cycleScan.py + pyproject [tool.importlinter] — 레이어 단방향 강제 (P0 가드)
    "libcst>=1.8.6",
    "networkx[default]>=3.0",  # scripts/build/buildIndustryMap.py — Kamada-Kawai+PageRank (default extra: scipy 포함)
    "pillow>=12.1.1",
    "pre-commit>=4.0.0",
    "pyright>=1.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=6.0.0",
    "syrupy>=4.7.0",  # CLI 출력 (rich Console export_text) snapshot 동결 — 본 SSOT 통합 acceptance test
    "pandera[polars]>=0.29.0",  # raw finance/report/docs frame 계약 — gather endpoint silent drift 차단
    "mutmut>=3.0.0",  # mutation testing — "테스트가 깨진 코드 잡나" 측정. core/ 한정 (Polars native 모듈 제외).
    "vcrpy>=6.0.0",  # HTTP record-replay — providers/dart, providers/edgar 외부 호출 회귀.
    "radon>=6.0.0",
    "rope>=1.14.0",
    "vulture>=2.0",
]

# ════════════════════════════════════════════════════════════════════
# Import-linter — 레이어 단방향 강제 + L2 양방향 cycle 차단 (P0 가드)
# ────────────────────────────────────────────────────────────────────
# 정책 SSOT: src/dartlab/skills/specs/operation/architecture.md
#   1. 상하 단방향: L0 ← L1 ← L1.5 ← L2 ← L3 ← L4 (이 contract)
#   2. L2 동급 단방향 허용 (sibling import OK)
#   3. L2 양방향 순환 절대금지 (별도: tests/audit/cycleScan.py)
# ════════════════════════════════════════════════════════════════════

[tool.importlinter]
root_package = "dartlab"

# F4 강행 — contract 활성화 + 핵심 chain link 8 곳 importlib 변환.
# 잔존 위반 (100+) 은 후속 0.10.x 에서 점진 inversion. 본 phase 는 가드 활성 + 기반 정리.
# CI fast 의 lint-imports step 은 continue-on-error 모드 — 위반 가시화하되 fail 안 함.

# ── Contract 1: 상하 layer 단방향 (L2 는 exhaustive=false 로 제외, 별도 forbidden)
[[tool.importlinter.contracts]]
name = "Layered architecture (L0~L1.5 + L3 + L4)"
type = "layers"
layers = [
    "dartlab.ai | dartlab.company",
    "dartlab.story",
    "dartlab.scan",
    "dartlab.gather",
    "dartlab.core",
]
exhaustive = false  # L2 5 엔진은 이 contract 에서 무시 (sibling 단방향 허용)
ignore_imports = []  # 후속 정리 — 진행하며 한 줄씩 비움

# ── Contract 1b: L0~L1.5 완료 게이트 전용 (tests/architecture 와 동일 범위)
[[tool.importlinter.contracts]]
name = "L0-L1.5 architecture boundary"
type = "layers"
layers = [
    "dartlab.scan | dartlab.frame | dartlab.synth | dartlab.reference",
    "dartlab.gather | dartlab.providers",
    "dartlab.core",
]
exhaustive = false
ignore_imports = []

# ── Contract 2: L2 가 상위 (L3/L4) import 금지 (direct only)
# allow_indirect_imports: true — direct 만 차단. transitive 는 root facade 정공법 D
# (dartlab/__init__.py 의 PEP 562 lazy + function-local import) 의 본질이라 도구 검사 외.
[[tool.importlinter.contracts]]
name = "L2 must not import L3/L4"
type = "forbidden"
source_modules = [
    "dartlab.analysis",
    "dartlab.credit",
    "dartlab.macro",
    "dartlab.quant",
    "dartlab.industry",
]
forbidden_modules = [
    "dartlab.story",
    "dartlab.ai",
    "dartlab.company",
]
allow_indirect_imports = true
ignore_imports = []

# ── Contract 3: L2 가 하위 (L1.5/L1) 우회 import 금지 — L2 는 L0 만 직접 import (direct only)
[[tool.importlinter.contracts]]
name = "L2 must not import L1.5/L1"
type = "forbidden"
source_modules = [
    "dartlab.analysis",
    "dartlab.credit",
    "dartlab.macro",
    "dartlab.quant",
    "dartlab.industry",
]
forbidden_modules = [
    "dartlab.scan",
    "dartlab.gather",
]
allow_indirect_imports = true
# 빌더/raw 데이터 접근 예외 — CLAUDE.md 표 "L1 직접 import 는 L1.5 에 없는 raw 가 필요할 때만 예외" 에 해당.
# industry/build 산업지도 빌더, quant alphas/factor/benchmark/screen/regime/signal 의 HF bulk + krx listing
# 등 raw 데이터 접근. frame/synth facade 확장 별도 트랙으로 점진 이전.
ignore_imports = [
    "dartlab.industry.build.delta -> dartlab.scan.io.parquet",
    "dartlab.industry.build.edges -> dartlab.scan.network.scanner",
    "dartlab.industry.build.edges -> dartlab.scan.network.edges",
    "dartlab.quant.alphas.bab -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.alphas.fundamentalMomentum -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.benchmark.data -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.benchmark.data -> dartlab.gather.bulkData.hfIndexBulk",
    "dartlab.quant.benchmark.data -> dartlab.gather.entry",
    "dartlab.quant.factor.build -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.factor.calc -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.factor.ranking -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.factor.value -> dartlab.gather.bulkData.hfBulk",
    "dartlab.quant.regime.marketContext -> dartlab.gather.entry",
    "dartlab.quant.screen._extendedCache -> dartlab.gather.entry",
    "dartlab.quant.screen._extendedCache -> dartlab.gather.infra.http",
    "dartlab.quant.screen._extendedCache -> dartlab.gather.sources.price",
    "dartlab.quant.screen.dataAccess -> dartlab.gather.entry",
    "dartlab.quant.screen.preset -> dartlab.gather.krx.listing",
    "dartlab.quant.signal.flow -> dartlab.gather.entry",
    "dartlab.analysis.financial.predictionSignals -> dartlab.scan",
    "dartlab.analysis.financial.predictionSignals -> dartlab.scan.network.edges",
    "dartlab.analysis.valuation.fitness -> dartlab.scan.builders.kr.extended",
]
