[project]
name = "dartlab-plugin-example"
version = "0.1.0"
description = "DartLab plugin entry-points 예시 — 외부 기여자 진입 템플릿"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "DartLab Contributors" }]
license = { text = "Apache-2.0" }

dependencies = [
    "dartlab",
]

# T5-1 / T5-2 — entry_points 그룹 "dartlab.plugins" 로 dartlab 에 자동 등록.
[project.entry-points."dartlab.plugins"]
hello = "dartlab_plugin_example.hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dartlab_plugin_example"]
